{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 235,
  "lineage": "c9eda2f3-9578-9964-9b35-e5b0b8cf38d4",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:loadbalancer/app/ebitaus-alb-dev/82e7e46d5d9de7f0",
            "arn_suffix": "app/ebitaus-alb-dev/82e7e46d5d9de7f0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ebitaus-alb-dev-1330708208.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:loadbalancer/app/ebitaus-alb-dev/82e7e46d5d9de7f0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ebitaus-alb-dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ff19361fa863b180"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03947c0f564a0f027"
              },
              {
                "subnet_id": "subnet-099ab2b89efafb60b"
              },
              {
                "subnet_id": "subnet-0df78d3c1c4618e8b"
              }
            ],
            "subnets": [
              "subnet-03947c0f564a0f027",
              "subnet-099ab2b89efafb60b",
              "subnet-0df78d3c1c4618e8b"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "ebitaus-alb-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ebitaus-alb-dev"
            },
            "vpc_id": "vpc-01b5af867be85d6f7",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:265058194173:security-group/sg-0ff19361fa863b180",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff19361fa863b180",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ebitaus-sg-alb-dev",
            "name_prefix": "",
            "owner_id": "265058194173",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ebitaus-sg-alb-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ebitaus-sg-alb-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b5af867be85d6f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:265058194173:security-group/sg-084f854a00822317b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084f854a00822317b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ebitaus-frontend-service-sg-task-dev",
            "name_prefix": "",
            "owner_id": "265058194173",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ebitaus-sg-task-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ebitaus-sg-task-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b5af867be85d6f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:265058194173:security-group/sg-0094e6c95c337c61e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0094e6c95c337c61e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8082,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8082
              }
            ],
            "name": "ebitaus-document-service-sg-task-dev",
            "name_prefix": "",
            "owner_id": "265058194173",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ebitaus-sg-task-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ebitaus-sg-task-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b5af867be85d6f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:265058194173:security-group/sg-0bd098e2e8f32ec01",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd098e2e8f32ec01",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ebitaus-user-service-sg-task-dev",
            "name_prefix": "",
            "owner_id": "265058194173",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ebitaus-sg-task-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ebitaus-sg-task-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b5af867be85d6f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:265058194173:security-group/sg-08dad6ba3502f96bc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08dad6ba3502f96bc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "ebitaus-notify-service-sg-task-dev",
            "name_prefix": "",
            "owner_id": "265058194173",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ebitaus-sg-task-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ebitaus-sg-task-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b5af867be85d6f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.services",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:listener/app/ebitaus-alb-dev/82e7e46d5d9de7f0/3af14913584c4b63",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:targetgroup/ebitaus-tg-frontend-service-dev/99638994a1fee44c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:listener/app/ebitaus-alb-dev/82e7e46d5d9de7f0/3af14913584c4b63",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:loadbalancer/app/ebitaus-alb-dev/82e7e46d5d9de7f0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.security_groups.aws_security_group.alb",
            "module.services.aws_lb_target_group.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.services",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:targetgroup/ebitaus-tg-frontend-service-dev/99638994a1fee44c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:listener-rule/app/ebitaus-alb-dev/82e7e46d5d9de7f0/3af14913584c4b63/3ab718f73a0da4f0",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:listener-rule/app/ebitaus-alb-dev/82e7e46d5d9de7f0/3af14913584c4b63/3ab718f73a0da4f0",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:listener/app/ebitaus-alb-dev/82e7e46d5d9de7f0/3af14913584c4b63",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.security_groups.aws_security_group.alb",
            "module.services.aws_lb_listener.http",
            "module.services.aws_lb_target_group.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:targetgroup/ebitaus-tg-document-service-dev/1b356a8ea5a1c50a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:listener-rule/app/ebitaus-alb-dev/82e7e46d5d9de7f0/3af14913584c4b63/c8e271933fdf99fa",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/document-service/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:listener-rule/app/ebitaus-alb-dev/82e7e46d5d9de7f0/3af14913584c4b63/c8e271933fdf99fa",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:listener/app/ebitaus-alb-dev/82e7e46d5d9de7f0/3af14913584c4b63",
            "priority": 80,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.security_groups.aws_security_group.alb",
            "module.services.aws_lb_listener.http",
            "module.services.aws_lb_target_group.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:targetgroup/ebitaus-tg-user-service-dev/ecdedb84191f1a49",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:listener-rule/app/ebitaus-alb-dev/82e7e46d5d9de7f0/3af14913584c4b63/e1879b1c3ef4a999",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/user-service/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:listener-rule/app/ebitaus-alb-dev/82e7e46d5d9de7f0/3af14913584c4b63/e1879b1c3ef4a999",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:listener/app/ebitaus-alb-dev/82e7e46d5d9de7f0/3af14913584c4b63",
            "priority": 70,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.security_groups.aws_security_group.alb",
            "module.services.aws_lb_listener.http",
            "module.services.aws_lb_target_group.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:targetgroup/ebitaus-tg-notify-service-dev/88cf708c101ce037",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:listener-rule/app/ebitaus-alb-dev/82e7e46d5d9de7f0/3af14913584c4b63/093bd2bdcb6bde5b",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/notification-service/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:listener-rule/app/ebitaus-alb-dev/82e7e46d5d9de7f0/3af14913584c4b63/093bd2bdcb6bde5b",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:listener/app/ebitaus-alb-dev/82e7e46d5d9de7f0/3af14913584c4b63",
            "priority": 60,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.security_groups.aws_security_group.alb",
            "module.services.aws_lb_listener.http",
            "module.services.aws_lb_target_group.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.services",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:targetgroup/ebitaus-tg-frontend-service-dev/99638994a1fee44c",
            "arn_suffix": "targetgroup/ebitaus-tg-frontend-service-dev/99638994a1fee44c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:targetgroup/ebitaus-tg-frontend-service-dev/99638994a1fee44c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ebitaus-tg-frontend-service-dev",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "ebitaus-tg-frontend-service-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ebitaus-tg-frontend-service-dev"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01b5af867be85d6f7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:targetgroup/ebitaus-tg-document-service-dev/1b356a8ea5a1c50a",
            "arn_suffix": "targetgroup/ebitaus-tg-document-service-dev/1b356a8ea5a1c50a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/document-service/api/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:targetgroup/ebitaus-tg-document-service-dev/1b356a8ea5a1c50a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ebitaus-tg-document-service-dev",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "ebitaus-tg-document-service-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ebitaus-tg-document-service-dev"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01b5af867be85d6f7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:targetgroup/ebitaus-tg-user-service-dev/ecdedb84191f1a49",
            "arn_suffix": "targetgroup/ebitaus-tg-user-service-dev/ecdedb84191f1a49",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/user-service/api/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:targetgroup/ebitaus-tg-user-service-dev/ecdedb84191f1a49",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ebitaus-tg-user-service-dev",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "ebitaus-tg-user-service-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ebitaus-tg-user-service-dev"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01b5af867be85d6f7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:targetgroup/ebitaus-tg-notify-service-dev/88cf708c101ce037",
            "arn_suffix": "targetgroup/ebitaus-tg-notify-service-dev/88cf708c101ce037",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/notification-service/api/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:265058194173:targetgroup/ebitaus-tg-notify-service-dev/88cf708c101ce037",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ebitaus-tg-notify-service-dev",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "ebitaus-tg-notify-service-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ebitaus-tg-notify-service-dev"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01b5af867be85d6f7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:265058194173:internet-gateway/igw-038f8f763a8debbed",
            "id": "igw-038f8f763a8debbed",
            "owner_id": "265058194173",
            "tags": {
              "Environment": "dev",
              "Name": "ebitaus-igw-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ebitaus-igw-dev"
            },
            "vpc_id": "vpc-01b5af867be85d6f7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-038f8f763a8debbed",
            "id": "r-rtb-0fc22b1684d195d001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fc22b1684d195d00",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:265058194173:route-table/rtb-0fc22b1684d195d00",
            "id": "rtb-0fc22b1684d195d00",
            "owner_id": "265058194173",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "ebitaus-routing-table-public-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ebitaus-routing-table-public-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b5af867be85d6f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06547283cc7b31df8",
            "route_table_id": "rtb-0fc22b1684d195d00",
            "subnet_id": "subnet-0df78d3c1c4618e8b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098b641256ec2495b",
            "route_table_id": "rtb-0fc22b1684d195d00",
            "subnet_id": "subnet-03947c0f564a0f027"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0936ba158d628d703",
            "route_table_id": "rtb-0fc22b1684d195d00",
            "subnet_id": "subnet-099ab2b89efafb60b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:265058194173:subnet/subnet-0df78d3c1c4618e8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df78d3c1c4618e8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "265058194173",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "ebitaus-public-subnet-dev-001"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ebitaus-public-subnet-dev-001"
            },
            "vpc_id": "vpc-01b5af867be85d6f7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:265058194173:subnet/subnet-03947c0f564a0f027",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03947c0f564a0f027",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "265058194173",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "ebitaus-public-subnet-dev-002"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ebitaus-public-subnet-dev-002"
            },
            "vpc_id": "vpc-01b5af867be85d6f7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:265058194173:subnet/subnet-099ab2b89efafb60b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099ab2b89efafb60b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "265058194173",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "ebitaus-public-subnet-dev-003"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ebitaus-public-subnet-dev-003"
            },
            "vpc_id": "vpc-01b5af867be85d6f7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:265058194173:vpc/vpc-01b5af867be85d6f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03f8535f2e9252d34",
            "default_route_table_id": "rtb-007eb4d23b99e8e11",
            "default_security_group_id": "sg-0a143491a34217483",
            "dhcp_options_id": "dopt-04473ae32812fdd60",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01b5af867be85d6f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-007eb4d23b99e8e11",
            "owner_id": "265058194173",
            "tags": {
              "Environment": "dev",
              "Name": "ebitaus-vpc-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ebitaus-vpc-dev"
            }
          }
        }
      ]
    }
  ]
}